fix: visible issues

--- a/src/app/remotes/toggle-menu-button/toggle-menu-button.component.scss
+++ b/src/app/remotes/toggle-menu-button/toggle-menu-button.component.scss
@@ -12,10 +12,6 @@
     transition: transform var(--p-transition-duration);
   }
 
-  .toggle-button-direction {
-    transform: rotate(180deg);
-  }
-
   & .hidden {
     display: none;
   }
